# bsa-pcie-exerciser

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  sourceme
.github/workflows/: docs.yml
docs/: GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  REGISTER_MAP.md  VERIFICATION_ARCHITECTURE.md  X86_TESTING_GUIDE.md
docs/planning/: litepcie_bsa_implementation_analysis.md  litepcie_dma_analysis_bsa.md
docs/source/: conf.py  index.rst
docs/source/bsa/: acs_gap_analysis.rst  ats.rst  dma.rst  index.rst  interrupts.rst  overview.rst  registers.rst  testcases.rst
docs/source/etherbone/: implementation.rst  index.rst  overview.rst  packet_format.rst  usb_framing.rst
docs/source/implementation/: architecture.rst  ats.rst  config_space.rst  dma.rst  endpoint.rst  index.rst  monitor.rst  msix.rst  pasid.rst
docs/source/litepcie/: architecture.rst  index.rst  modifications.rst  pcie_7x_ip_properties.txt  pcie_byteswap_architecture.rst
docs/source/pcie/: index.rst  msix.rst
docs/specs/: arm_bsa_pcie_exerciser_hardware_spec.md  pcie_screamer_analysis.md  usb_monitoring_design.md
hooks/: check_copyright.py  gtkw.py
software/: Cargo.toml
software/src/: etherbone.rs  lib.rs  usb.rs
src/bsa_pcie_exerciser/: bsa_pcie_exerciser.py
src/bsa_pcie_exerciser/ats/: __init__.py  atc.py  engine.py  invalidation.py
src/bsa_pcie_exerciser/common/: __init__.py  protocol.py
src/bsa_pcie_exerciser/core/: __init__.py  bar_routing.py  bsa_registers.py  multibar_endpoint.py
src/bsa_pcie_exerciser/dma/: __init__.py  buffer.py  engine.py  handler.py
src/bsa_pcie_exerciser/gateware/: __init__.py
src/bsa_pcie_exerciser/gateware/ats/: __init__.py  atc.py  engine.py  invalidation.py
src/bsa_pcie_exerciser/gateware/config/: __init__.py  pcie_config.py
src/bsa_pcie_exerciser/gateware/core/: bar_routing.py  bsa_registers.py  intx_controller.py  multibar_endpoint.py
src/bsa_pcie_exerciser/gateware/dma/: engine.py  handler.py
src/bsa_pcie_exerciser/gateware/monitor/: txn_monitor.py
src/bsa_pcie_exerciser/gateware/msix/: integration.py  table.py
src/bsa_pcie_exerciser/gateware/pasid/: __init__.py
src/bsa_pcie_exerciser/gateware/platform/: __init__.py  spec_a7.py  squirrel.py
src/bsa_pcie_exerciser/gateware/soc/: __init__.py  base.py  spec_a7.py  squirrel.py
src/bsa_pcie_exerciser/gateware/usb/: __init__.py  etherbone.py  etherbone_adapter.py  ft601.py  (+1 more)
src/bsa_pcie_exerciser/litepcie/: endpoint.py  multibar_endpoint.py
src/bsa_pcie_exerciser/monitor/: __init__.py  txn_monitor.py
src/bsa_pcie_exerciser/msix/: __init__.py  controller.py  integration.py  table.py
src/bsa_pcie_exerciser/pasid/: __init__.py  prefix_injector.py
src/bsa_pcie_exerciser/platform/: __init__.py  spec_a7_platform.py  squirrel.py
src/bsa_pcie_exerciser/soc/: __init__.py  base.py  spec_a7.py  squirrel.py
src/bsa_pcie_exerciser/tools/: __init__.py  capture.py  cli.py  export.py  live.py
src/bsa_pcie_exerciser/usb/: __init__.py  core.py  etherbone.py  ft601.py  monitor_bridge.py
tbench/: __init__.py
tbench/common/: __init__.py  coverage.py  ft601_stub.py  pcie_bfm.py  randomizer.py  tlp_builder.py  usb_bfm.py
tbench/dma/: Makefile  tb_dma.py  test_dma.py
tbench/etherbone/: Makefile  tb_etherbone.py  test_basic.py  waves.gtkw
tbench/integration/: README.md  __init__.py  tb_integration.py  test_ats.py  test_byte_enables.py  test_intx.py  test_monitor.py  test_random.py  test_registers.py  waves.gtkw
tbench/msix/: tb_msix.py  test_msix.py  waves.gtkw
tbench/usb/: tb_usb.py  test_arbiter.py  test_ats_invalidation.py  test_cdc.py  test_corner_cases.py  test_dma_ordering.py  test_etherbone.py  test_golden_reference.py  test_monitor_rx.py  test_monitor_timing.py  test_monitor_tx.py  test_pasid_switching.py  test_requester_id.py  test_stress.py  waves.gtkw
tests/common/: coverage.py  ft601_stub.py  pcie_bfm.py  phy_stub.py  platform.py  randomizer.py  tlp_builder.py  usb_bfm.py
tests/dma/: tb_dma.py  test_dma.py
tests/integration/: Makefile  README.md  tb_integration.py  test_ats.py  test_byte_enables.py  test_intx.py  test_monitor.py  test_random.py  test_registers.py  waves.gtkw
tests/msix/: Makefile  tb_msix.py  test_msix.py  waves.gtkw
tests/usb/: Makefile  __init__.py  tb_usb.py  test_arbiter.py  test_ats_invalidation.py  test_cdc.py  test_corner_cases.py  test_dma_ordering.py  test_etherbone.py  test_golden_reference.py  test_monitor_rx.py  test_monitor_timing.py  test_monitor_tx.py  test_pasid_switching.py  test_requester_id.py  test_stress.py  waves.gtkw
(+9 files in other folders)
